--- a/style.css
+++ b/style.css
@@ -1,11 +1,36 @@
-main{
+header{
+    text-align: center;
+}
+
+.container{
+    position: relative;
+    display: grid;
+    place-items: center;
+    margin-top: 25px;
+}
+
+.grid-container{
     width: 70%;
     display: grid;
     grid-template-columns: repeat(3, minmax(50px, 1fr));
     grid-template-rows: repeat(3, minmax(150px, 1fr));
     margin: auto;
+    font-size: 100px;
 }
 
 .cell-div{
     border: 1px solid black;
+    display: grid;
+    justify-content: center;
+    align-items: center;
 }
+
+.game-over-div{
+    height: 300px;
+    width: 400px;
+    border: 1px solid black;
+    background-color: rgba(255, 204, 204, 0.85);
+    position: absolute;
+}
+
+
