--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-header{
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@800&family=Londrina+Outline&family=Roboto&display=swap');
+
+
+* {
+    box-sizing: border-box;
+}
+
+body{
     text-align: center;
+    font-family: 'Roboto', sans-serif;
+    background: rgb(178,188,194);
+    background: radial-gradient(circle, rgba(178,188,194,1) 0%, rgba(196,219,232,1) 79%);
 }
 
 .container{
@@ -23,14 +33,36 @@ header{
     display: grid;
     justify-content: center;
     align-items: center;
+    font-family: 'Londrina Outline', cursive;
+    /* font-weight: 800; */
 }
+
+/* span.bubble-font{
+    font-family: 'Londrina Outline', cursive;
+    font-weight: 800; 
+} */
 
 .game-over-div{
     height: 300px;
-    width: 400px;
-    border: 1px solid black;
-    background-color: rgba(255, 204, 204, 0.85);
+    width: 500px;
+    border: 30px solid black;
+    background-color: rgba(255, 204, 204, 0.90);
     position: absolute;
+    display: none;
+    place-items: center;
+    font-size: 60px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 20px 20px 20px 20px
+}
+
+.reset-btn{
+    background-color: #d9d0bb;
+    padding: 7px 28px;
+    border-radius: 13px;
+    text-transform: uppercase;
+    margin-top: 15px;
 }
 
 
