Updated to include 3x3 and 4x4 grid with toggle

--- a/style.css
+++ b/style.css
@@ -6,7 +6,13 @@
 }
 
 header{
-    margin-bottom: 25px;
+    margin-bottom: 20px;
+}
+
+.switch-div{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center; 
 }
 
 h1{
@@ -28,8 +34,70 @@ body{
     display: grid;
     place-items: center;
     margin-top: 25px;
-    max-width: 600px;
+    max-width: 550px;
     margin: auto;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin: auto;
+    margin-bottom: 10px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 .grid-container{
@@ -41,6 +109,23 @@ body{
     background-color: white;
     border-radius: 26px;
     box-shadow: 10px 10px 12px #e5e5e5;
+    transition: all 0.5s linear;
+}
+
+.grid-container-4x4{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(50px, 1fr));
+    grid-template-rows: repeat(4, minmax(150px, 1fr));
+    font-size: 100px;
+    background-color: white;
+    border-radius: 26px;
+    box-shadow: 10px 10px 12px #e5e5e5;
+    transition: all 0.5s linear;
+}
+
+.hidden{
+    display: none;
 }
 
 .cell-div{
