--- a/style.css
+++ b/style.css
@@ -17,10 +17,7 @@ main{
     width: 80%;
 }
 
-aside{
-    font-size: 12px;
-    margin: 40px 0;
-}
+
 
 .switch-div{
     display: flex;
@@ -171,7 +168,7 @@ input:checked + .slider:before {
     box-shadow: 1px 0px 12px 9px #e5e5e5;
 }
 
-.reset-btn{
+.new-game-btn{
     background-color: #d9d0bb;
     padding: 7px 28px;
     border-radius: 13px;
@@ -184,4 +181,23 @@ input:checked + .slider:before {
     font-size: 15px;
 }
 
+aside{
+    font-size: 12px;
+    margin: 40px 0;
+}
 
+.game-details-div{
+    margin: 30px 0;
+}
+
+.reset-btn{
+    background-color: #d9d0bb;
+    padding: 7px 28px;
+    border-radius: 13px;
+    text-transform: uppercase;
+    border: 3px solid white;
+    box-shadow: -1px 0px 12px 3px white;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 15px;
+}
