Updated to have pop up with players names instead of using prompts

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ main{
     margin: 0 auto;
     display: grid;
     grid-template-columns: 4fr 1fr;
-    column-gap: 40px;
+    column-gap: 20px;
     width: 80%;
 }
 
@@ -37,6 +37,46 @@ body{
     text-align: center;
     font-family: 'Roboto', sans-serif;
     background: radial-gradient(circle, #9287c294 0%, rgb(193 233 255) 140%);
+}
+
+.user-input-popup{
+    height: 400px;
+    width: 80%;
+    border: 10px solid #d9d0bb;
+    background-color: rgba(146,135,194,0.9);
+    position: absolute;
+    place-items: center;
+    font-size: 30px;
+    font-weight: 900;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    border-radius: 20px 20px 20px 20px;
+    color: white;
+    box-shadow: 1px 0px 12px 9px #e5e5e5;
+    display: flex;
+    z-index: 4;
+}
+
+.user-input-popup input{
+    width: 200px;
+    height: 32px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    display: block;
+    margin: 10px auto;
+}
+
+.start-game{
+    background-color: #d9d0bb;
+    padding: 7px 28px;
+    border-radius: 13px;
+    text-transform: uppercase;
+    border: 3px solid white;
+    box-shadow: -1px 0px 12px 3px white;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 15px;
 }
 
 .container-div{
@@ -174,6 +214,8 @@ input:checked + .slider:before {
     box-shadow: 1px 0px 12px 9px #e5e5e5;
     --animate-duration: .52s;
 }
+
+
 
 .winner-div{
     width: 90%;
